--- a/client-test/index.html
+++ b/client-test/index.html
@@ -47,7 +47,7 @@
             <div class="user-input-form space-y-6">
                 <div>
                     <label for="userPreferences" class="block text-sm font-medium text-gray-700">Learning Preferences (comma-separated)</label>
-                    <input type="text" id="userPreferences" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="e.g., Spring Boot, API Design">
+                    <input type="text" id="userPreferences" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" placeholder="e.g., Java, DSA">
                 </div>
                 <div class="text-center">
                     <button id="recommendBtn" class="w-full md:w-auto px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 transition duration-150 ease-in-out">
@@ -235,7 +235,13 @@
 
         recommendations.forEach(course => {
             const courseElement = document.createElement('div');
-            courseElement.className = 'bg-white p-6 rounded-lg shadow space-y-2 border-l-4 border-indigo-500';
+            courseElement.className = 'bg-white p-6 rounded-lg shadow space-y-3 border-l-4 border-indigo-500';
+            const linkLabel = course.type === 'doc' ? 'View Documentation' :
+                             course.type === 'video' ? 'Watch Video' :
+                             course.type === 'project' ? 'Explore Project' : 'Visit Resource';
+            const linkIcon = course.type === 'doc' ? 'fa-book' :
+                             course.type === 'video' ? 'fa-video' :
+                             course.type === 'project' ? 'fa-code' : 'fa-link';
             courseElement.innerHTML = `
                 <h4 class="text-xl font-bold text-gray-800">${course.title}</h4>
                 <p class="text-gray-600">${course.description}</p>
@@ -246,6 +252,13 @@
                 <div class="flex items-center text-sm text-gray-500 space-x-2">
                     <i class="fas fa-chart-line"></i>
                     <span>Relevance: ${course.relevance}%</span>
+                </div>
+                <div class="flex flex-col space-y-2">
+                    ${course.link ? `
+                        <a href="${course.link}" target="_blank" class="text-blue-600 hover:text-blue-800 flex items-center space-x-2">
+                            <i class="fas ${linkIcon}"></i>
+                            <span>${linkLabel}</span>
+                        </a>` : ''}
                 </div>
             `;
             container.appendChild(courseElement);
